--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 	<div class="data">
 		<ul style="list-style: none;">
-		<li>Registered Individuals <strong>20</strong>
-		<li>Teams formed: <strong>TBD</strong>
-		<li>Number of Participants in Random pool: <strong>TBD</strong>
-		<li>(last updated at 12:00 19 Apr)
+		<li>Registered Individuals <strong>25+</strong>
+		<li>Teams formed: <strong>6+</strong>
+		<li>Number of Participants in Random pool: <strong>~5</strong>
+		<li>(last updated at 00:00 20 Apr)
 		<li><a id="more" href="knowmore.html">Let us tell you more about it</a>
 			
 		</ul>
